@@ -60,7 +60,7 @@ void testMemIO(const char *lpszPathName);
 // Multipage test suite
 // ==========================================================
 
-void testBuildMPage(char *src_filename, char *dst_filename, FREE_IMAGE_FORMAT dst_fif);
+void testBuildMPage(char *src_filename, char *dst_filename, FREE_IMAGE_FORMAT dst_fif, unsigned bpp);
 
 #endif // TEST_FREEIMAGE_API_H
 
